--- a/DockerFile
+++ b/DockerFile
@@ -1,11 +1,11 @@
-# Use an official Python runtime as a parent image
+# Use the official Python image from the Docker Hub
 FROM python:3.12-slim
 
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the project files into the container
-COPY . .
+# Copy the current directory contents into the container at /app
+COPY . /app
 
 # Install Poetry
 RUN pip install poetry
@@ -13,5 +13,9 @@ RUN pip install poetry
 # Install dependencies
 RUN poetry install
 
-# Run the training script
-CMD ["poetry", "run", "python", "src/train.py"]
+# Set the entrypoint based on the argument passed during build
+ARG ENTRYPOINT
+ENTRYPOINT ["poetry", "run", "python", "-m", "my_news_app.ENTRYPOINT"]
+
+# Default command
+CMD ["--help"]
