--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ python-dateutil = "^2.9.0.post0"
 jupyter = "^1.0.0"
 cython = "^3.0.10"
 numba = "^0.59.1"
+boto3 = "^1.34.117"
+moto = "^5.0.9"
+setuptools = "^70.1.0"
+toml = "^0.10.2"
 
 
 [build-system]
